fix twitching zoom on mobile: attempt # 1
on mobile, when content is
overflowing, the screen
zooms in and out repreatedly
on tap and therefore it is
impossible to zoom in or out.

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -123,8 +123,10 @@ details:not([open]) summary ::after {
 
 /* End of credit */
 
-pre {
+pre,
+code {
   white-space: pre-wrap;
+  overflow-wrap: anywhere;
 }
 
 .container {
